<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@drawable/rounded_up_corners_bg">

    <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_16dp"
            android:gravity="center_vertical"
            android:padding="@dimen/standard_16dp"
            android:text="@string/settings_lbl_show_units"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/textGray" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/standard_16dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unit_bananas"
                android:textColor="@color/textBlack" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:listDivider" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/standard_16dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unit_kilometers"
                android:textColor="@color/textBlack" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:listDivider" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/standard_16dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unit_retarded"
                android:textColor="@color/textBlack" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.LinearLayoutCompat>


        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_16dp"
            android:gravity="center_vertical"
            android:padding="@dimen/standard_16dp"
            android:text="@string/settings_lbl_other"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/textGray" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/standard_16dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_dark_mode"
                android:textColor="@color/textBlack" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/standard_16dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_dark_mode"
                android:textColor="@color/textBlack" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.LinearLayoutCompat>


    </android.support.v7.widget.LinearLayoutCompat>
</ScrollView>
